@@ -2347,7 +2347,8 @@ public class ColumnFamilyStore implements ColumnFamilyStoreMBean
                 }
 
                 // remove purgable tombstones from result - see CASSANDRA-11427
-                data.purgeTombstones(gcBefore(filter.timestamp));
+                if (data != null)
+                    data.purgeTombstones(gcBefore(filter.timestamp));
 
                 rows.add(new Row(rawRow.key, data));
                 if (!ignoreTombstonedPartitions || !data.hasOnlyTombstones(filter.timestamp))
